# fit-manager-ai

./: .copilot-instructions.md  .gitignore  AGENTS.md  ANALISI_COMPETITIVA_LACUNE.md  ANALISI_DATI_DATABASE.md  ANALISI_GAP_WORKOUT_LEADERS.md  ANALISI_PROBLEMI_PROGRAMMAZIONE.md  ARCHITECTURE.md  BLINDATURA_LOGICA_FINANZIARIA.md  CLAUDE.md  COMPETITIVE_ADVANTAGE_FINANCIAL.md  COMPLETION_REPORT.md  COMPLETION_v8.1.md  CORREZIONE_LOGICA_FINANZIARIA.md  DELIVERABLES_SUMMARY.md  DOCUMENTAZIONE_INDEX.md  ESTRATEGIA_AI_WORKOUT_AVANZATA.md  FINAL_CHECKLIST.md  FINANCIAL_MODEL.md  FORMULE_FINANZIARIE.md  GENERATION_FIX_REPORT.md  GUIDA_FINANCIAL_INTELLIGENCE.md  HOTFIX_GENNAIO_17.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLATION_VERIFICATION_CHECKLIST.md  LAUNCH_SCOPE.md  MANIFESTO.md  PASSO_1_COMPLETATO.md  POSTMORTEMS.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_WORKOUT_ENGINE.md  README.md  RESOCONTO_ANALISI.md  RESTRUCTURING_COMPLETE.md  RIEPILOGO_ANALISI.md  RIEPILOGO_ANALISI_DATA_SETS.md  ROADMAP.md  ROADMAP_SETTIMANALE.md  (+19 more)
.claude/: settings.json  settings.local.json
.codex/: config.toml
.streamlit/: config.toml
agents/: README.md
alembic/: env.py
alembic_nutrition/: env.py
api/: AGENTS.override.md  CLAUDE.md  __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  seed_exercises.py
core/: CLAUDE.md  card_parser.py  config.py  constants.py  crm_db.py  db_migrations.py  document_manager.py  error_handler.py  exercise_archive.py  exercise_database.py  exercise_library_extended.py  exercise_library_pro.py  financial_analytics.py  knowledge_chain.py  methodology_chain.py  models.py  models_v2.py  pattern_extractor.py  periodization_models.py  session_template.py  ui_components.py  workflow_engine.py  workout_ai_pipeline.py  workout_generator.py  workout_generator_v2.py
data/: catalog.sha256
docs/: CLIENT_PORTAL_STRATEGY.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT_PLAN.md  POST_LAUNCH_ISSUES.md  README.md  RELEASE_CHECKLIST.md  RUNTIME_DIAGNOSTICS_PLAYBOOK.md  SUPPORT_RUNBOOK.md  TAILSCALE_FUNNEL_SETUP.md  TAILSCALE_FUNNEL_STRATEGY.md  UPGRADE_PROCEDURE.md  nutrition-v2-strategy.md
frontend/: AGENTS.override.md  CLAUDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
installer/: fitmanager.iss  launcher.bat
knowledge_base/: README.md
scripts/: seed_data.py  seed_nutrition_foods.py  seed_nutrition_foods_2.py  seed_nutrition_foods_3.py  seed_nutrition_foods_4.py  seed_nutrition_gaps.py  seed_pietanze.py
server/: CLAUDE.md  app.py  app_dashboard.py
tests/: __init__.py  conftest.py  test_aging_report.py  test_card_parser_word.py  test_cash_audit_log.py  test_client_avatar.py  test_client_dossier.py  test_connectivity_config.py  test_connectivity_config_endpoint.py  test_connectivity_portal_validation.py  test_connectivity_portal_validation_endpoint.py  test_connectivity_runtime.py  test_connectivity_status_endpoint.py  test_connectivity_verify.py  test_connectivity_verify_endpoint.py  test_contract_integrity.py  test_dashboard_clinical_readiness.py  test_dna_generation.py  test_health_endpoint.py  test_jwt_bootstrap.py  test_license_middleware.py  test_license_roundtrip.py  test_license_service.py  test_logging_config.py  test_pay_rate.py  test_rate_guards.py  test_smart_selection.py  test_soft_delete_integrity.py  test_support_snapshot_endpoint.py  test_sync_recurring.py  test_training_science_analyzer.py  test_unpay_rate.py  test_validation_matrix.py  test_workout_refactored.py  test_workout_v3.py  test_workspace_today.py
tools/: DUAL_ENV.md  diagnostic_smart_coverage.ts  export_exercises_seed.py  populate_exercises.py
(+799 files in other folders)
