# pyproject.toml — FitManager AI Studio v3 (FastAPI + Next.js era)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-manager-ai"
version = "3.0.0"
authors = [
  { name="G. Verardo", email="tuo.email@example.com" },
]
description = "CRM AI per personal trainer e professionisti fitness a P.IVA."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    # --- CORE LIBS (Base) ---
    "pandas==2.2.2",
    "numpy==1.26.4",
    "requests",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.1",
    "plotly==5.22.0",
    "feedparser",
    "watchdog",
    "pydantic>=2.7.4",
    "python-dateutil",
    "python-docx==1.1.2",
    "cryptography",

    # --- API LAYER (FastAPI + Auth) ---
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "alembic",
    "pytest",
    "httpx",

    # --- LANGCHAIN ECOSYSTEM (AI Logic — core/) ---
    "langchain==0.2.5",
    "langchain-community",
    "langchain-core",
    "langchain-chroma",
    "langchain-ollama",
    "langchain-text-splitters",

    # --- RAG & ML (Motore AI Locale — core/) ---
    "ollama==0.5.4",
    "PyMuPDF==1.24.1",
    "chromadb==0.4.24",
    "torch==2.3.0",
    "transformers==4.41.2",
    "sentence-transformers==2.7.0",
    "scikit-learn==1.5.0",
    "joblib==1.4.2",
]

[project.urls]
"Homepage" = "https://github.com/gverardo87-lab/fit-manager-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "tools*", "knowledge_base*"]
exclude = ["data*", "venv*"]